test/fails/bad_functions/for_loops.lgl
void main() {
    int x = 10;
    int y = 0;
    for (int i = 0; i < x; i++) {
        y += 1;
    }
    print y;
}